# Aegis

./: .gitignore  Cargo.toml  Dockerfile  README.md  ga_result_0steps.json  ga_result_1steps.json  ga_result_2steps.json  ga_result_3steps.json  ga_result_4steps.json  ga_result_5steps.json  pyproject.toml  python_bindings.rs  test_py.py
.cargo/: config.toml
k8s/: jb-runner-rbac.yaml
model_weights/: supervisor.pt
saved_evolution_results/: run_1.json
src/: athena_client.rs  consts.rs  docs.rs  handlers.rs  k8s_job.rs  lib.rs  main.rs  portfolio.rs  python_bindings.rs  sampling.rs  web_app.rs
src/evolution/: aggregator.rs  mod.rs  objective.rs  portfolio_evolution.rs
src/evolution/portfolio_evolution/: gradients.rs  memetic.rs  mod.rs
src/evolution/portfolio_evolution/pareto_evolution/: memetic_pareto.rs  mod.rs  standard_pareto.rs
src/prev_results/: evolution_time_100_run_0  evolution_time_100_run_1  evolution_time_100_run_2  evolution_time_100_run_3  evolution_time_100_run_4  evolution_time_100_run_5  evolution_time_100_run_6  evolution_time_100_run_7  evolution_time_100_run_8  evolution_time_100_run_9
src/results/: evolution_time_100_run_0  evolution_time_100_run_1  evolution_time_100_run_2  evolution_time_100_run_3  evolution_time_100_run_4  evolution_time_100_run_5  evolution_time_100_run_6  evolution_time_100_run_7  evolution_time_100_run_8  evolution_time_100_run_9  evolution_time_120_run_0  evolution_time_120_run_1  evolution_time_120_run_2  evolution_time_120_run_3  evolution_time_120_run_4  evolution_time_120_run_5  evolution_time_120_run_6  evolution_time_120_run_7  evolution_time_120_run_8  evolution_time_120_run_9  evolution_time_140_run_0  evolution_time_140_run_1  evolution_time_140_run_2  evolution_time_140_run_3  evolution_time_140_run_4  evolution_time_140_run_5  evolution_time_140_run_6  evolution_time_140_run_7  evolution_time_140_run_8  evolution_time_140_run_9  evolution_time_160_run_0  evolution_time_160_run_1  evolution_time_160_run_2  evolution_time_160_run_3  evolution_time_160_run_4  evolution_time_160_run_5  evolution_time_160_run_6  evolution_time_160_run_7  evolution_time_160_run_8  evolution_time_160_run_9  (+31 more)
