[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
ndarray = "0.16.1"
statrs = "0.17.1"
rand = "0.8.5"
rayon = "1.10.0"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
num_cpus = "1.16.0"
anyhow = "1.0.97"
tracing = "0.1.41"
tonic = "0.13.0"
futures = "0.3.31"
aegis_athena_contracts = { git = "https://github.com/ARelaxedScholar/Aegis-Athena-Contracts" }
utoipa = "5.3.1"
tracing-subscriber = "0.3.19"

[lib]
name = "aegis"
path = "src/lib.rs"
crate_type = ["cdylib"]

[dependencies.pyo3]
version = "0.18"
features = ["extension-module"]
