[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
ndarray = "0.16.1"
statrs = "0.17.1"
rand = "0.8.5"
rayon = "1.10.0"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
num_cpus = "1.16.0"
anyhow = "1.0.97"
tracing = "0.1.41"
tonic = "0.13.0"
futures = "0.3.31"
aegis_athena_contracts = { git = "ssh://git@github.com/ARelaxedScholar/Aegis-Athena-Contracts.git" }
utoipa = "5.3.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bincode = "2.0.1"
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.3"
dotenv = "0.15.0"
utoipa-swagger-ui = "9.0.1"
tower-http = { version = "0.6.2", features = ["full"] }
tower = "0.5.2"
once_cell = "1.21.3"
http = "1.3.1"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
uuid = { version = "1.2", features = ["v4"] }
kube-runtime = "0.99.0"
reqwest = { version = "0.12.15", features = ["json"] }

[lib]
name = "aegis"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aegis-bin"
path = "src/main.rs"



